Had to fix some closing tags

--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
 
 	<head>
-	<title>Julio Almanza | Portfolio</title>
+	<title>Julio Almanza | About</title>
 
 
 	<link rel="stylesheet" href="css/styles.css">
 	<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
 	</head>
 <body>
-	</nav>
+	<!--I had trouble placing the image correctly-->
+	
 		<h1>Julio Almanza</h1>
-			<nav>
-		<a href="index.html">About</a>
+	<nav>
+		<strong>About</strong>
 		|
-		<strong>Portfolio</strong>
+		<a href="portfolio.html">Portfolio</a>
+
 	</nav>
 		<div class=container>
 			<img src="./images/IMG_1285.JPG" alt="avatar">
@@ -23,7 +25,7 @@
 	
 		<p> Hi, my name is Julio, I have a dog, a tv, and a floor. Eventually, I hope this about me page can be awesome.</p>
 
-		<nav>
+		<nav class=footer>
 			<a href="http://facebook.com">Facebook</a>
 			|
 			<a href="http://twitter.com">Twitter</a>
